--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
+        "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
+        "nexmo/laravel": "^2.4",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
